--- a/convertedPages/AbstrSynTree.h.html
+++ b/convertedPages/AbstrSynTree.h.html
@@ -13,7 +13,7 @@
 #pragma once
 <div class="comments">/////////////////////////////////////////////////////////////////////</div>
 <div class="comments">//  AbstrSynTree.h - Represents an Abstract Syntax Tree            //</div>
-<div class="comments">//  ver 1.4                                                        //</div>
+<div class="comments">//  ver 1.5                                                        //</div>
 <div class="comments">//  Language:      Visual C++ 2015                                 //</div>
 <div class="comments">//  Platform:      Dell XPS 8900, Windows 10                       //</div>
 <div class="comments">//  Application:   Used to support parsing source code             //</div>
@@ -46,6 +46,8 @@
 
   Maintenance History:
   ====================
+  ver 1.5 : 03 Mar 2019
+  - fixed size calculation which overflowed on certain namespaces
   ver 1.4 : 26 Feb 2017
   - added parentType_ member to support better grammar analysis
   ver 1.3 : 29 Oct 2016
